@@ -1,106 +1,110 @@
-#******************************************************************** 
-# Wrapper Properties 
-#******************************************************************** 
-# Java Application 
-wrapper.java.command=java 
+ #********************************************************************
+ # Wrapper Properties
+ #********************************************************************
+ # Java Application
+ wrapper.java.command=java
 
-# Java Main class 
-wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperSimpleApp 
+ # Java Main class
+ wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperSimpleApp
 
-# Java Classpath (include wrapper.jar)  Add class path elements as 
-#  needed starting from 1 
-wrapper.java.classpath.1=lib/wrapper/*.jar  
-wrapper.java.classpath.2=lib/*.jar 
+ # Java Classpath (include wrapper.jar)  Add class path elements as
+ #  needed starting from 1
+ wrapper.java.classpath.1=lib/wrapper/*.jar
+ wrapper.java.classpath.2=lib/*.jar
 
-# Java Library Path (location of Wrapper.DLL or libwrapper.so) 
-wrapper.java.library.path.1=lib/wrapper
+ # Java Library Path (location of Wrapper.DLL or libwrapper.so)
+ wrapper.java.library.path.1=lib/wrapper
 
-# Java Additional Parameters 
-wrapper.java.additional.1=-Djavax.management.builder.initial=mx4j.server.MX4JMBeanServerBuilder
+ # Java Additional Parameters
+ wrapper.java.additional.1=-Djavax.management.builder.initial=mx4j.server.MX4JMBeanServerBuilder
 
-# Initial Java Heap Size (in MB) 
-wrapper.java.initmemory=3 
+ # Initial Java Heap Size (in MB) 
+ wrapper.java.initmemory=3
 
-# Maximum Java Heap Size (in MB) 
-wrapper.java.maxmemory=256 
+ # Maximum Java Heap Size (in MB)
+ wrapper.java.maxmemory=256
 
-# Application parameters.  Add parameters as needed starting from 1 
-wrapper.app.parameter.1=CruiseControlWithJetty
-wrapper.app.parameter.2=-jmxport
-wrapper.app.parameter.3=8000
-wrapper.app.parameter.4=-configfile 
-wrapper.app.parameter.5=config.xml
+ # Application parameters.  Add parameters as needed starting from 1
+ wrapper.app.parameter.1=CruiseControlWithJetty
+ wrapper.app.parameter.2=-webport
+ wrapper.app.parameter.3=8080
+ wrapper.app.parameter.4=-jmxport
+ wrapper.app.parameter.5=8000
+ wrapper.app.parameter.6=-configfile
+ wrapper.app.parameter.7=config.xml
+ wrapper.app.parameter.8=-rmiport
+ wrapper.app.parameter.9=1099
 
-# Port which the native wrapper code will attempt to connect to 
-wrapper.port=1777 
-
-
-#******************************************************************** 
-# Wrapper Logging Properties 
-#******************************************************************** 
-# Format of output for the console.  (See docs for formats) 
-wrapper.console.format=PM 
-
-# Log Level for console output.  (See docs for log levels) 
-wrapper.console.loglevel=INFO 
-
-# Log file to use for wrapper output logging. 
-wrapper.logfile=logs/wrapper.log 
-
-# Format of output for the log file.  (See docs for formats) 
-wrapper.logfile.format=LPTM 
-
-# Log Level for log file output.  (See docs for log levels) 
-wrapper.logfile.loglevel=INFO 
-
-# Maximum size that the log file will be allowed to grow to before 
-#  the log is rolled. Size is specified in bytes.  The default value 
-#  of 0, disables log rolling.  May abbreviate with the 'k' (kb) or 
-#  'm' (mb) suffix.  For example: 10m = 10 megabytes. 
-wrapper.logfile.maxsize=10m 
-
-# Maximum number of rolled log files which will be allowed before old 
-#  files are deleted.  The default value of 0 implies no limit. 
-wrapper.logfile.maxfiles=10 
-
-# Log Level for sys/event log output.  (See docs for log levels) 
-wrapper.syslog.loglevel=ERROR 
-
-#******************************************************************** 
-# Wrapper NT Service Properties 
-#******************************************************************** 
-# WARNING - Do not modify any of these properties when an application 
-#  using this configuration file has been installed as a service. 
-#  Please uninstall the service before modifying this section.  The 
-#  service can then be reinstalled. 
-
-# Name of the service 
-wrapper.ntservice.name=CruiseControl 
-
-# Display name of the service 
-wrapper.ntservice.displayname=CruiseControl Service 
-
-# Description of the service 
-wrapper.ntservice.description=Continuous integration builds \
-and tests with JUnit, Ant and CruiseControl. 
-
-# Service dependencies.  Add dependencies as needed starting from 1 
-wrapper.ntservice.dependency.1= 
-
-# Mode in which the service is installed.  AUTO_START or DEMAND_START 
-wrapper.ntservice.starttype=AUTO_START 
-
-# Priority at which
- the service is run.  NORMAL, LOW, HIGH, or 
-#  REALTIME 
-wrapper.ntservice.process_priority=NORMAL 
-
-# Allow the service to interact with the desktop. 
-wrapper.ntservice.interactive=false
+ # Port which the native wrapper code will attempt to connect to
+ wrapper.port=1777
 
 
-#****************************************************************
-# Wrapper Linux/Unix Service Properties
-#****************************************************************
-wrapper.daemonize=TRUE
+ #********************************************************************
+ # Wrapper Logging Properties
+ #********************************************************************
+ # Format of output for the console.  (See docs for formats)
+ wrapper.console.format=PM
+
+ # Log Level for console output.  (See docs for log levels)
+ wrapper.console.loglevel=INFO
+
+ # Log file to use for wrapper output logging.
+ wrapper.logfile=logs/wrapper.log
+
+ # Format of output for the log file.  (See docs for formats)
+ wrapper.logfile.format=LPTM
+
+ # Log Level for log file output.  (See docs for log levels)
+ wrapper.logfile.loglevel=INFO
+
+ # Maximum size that the log file will be allowed to grow to before
+ #  the log is rolled. Size is specified in bytes.  The default value
+ #  of 0, disables log rolling.  May abbreviate with the 'k' (kb) or
+ #  'm' (mb) suffix.  For example: 10m = 10 megabytes.
+ wrapper.logfile.maxsize=10m
+
+ # Maximum number of rolled log files which will be allowed before old
+ #  files are deleted.  The default value of 0 implies no limit.
+ wrapper.logfile.maxfiles=10
+
+ # Log Level for sys/event log output.  (See docs for log levels)
+ wrapper.syslog.loglevel=ERROR
+
+ #********************************************************************
+ # Wrapper NT Service Properties
+ #********************************************************************
+ # WARNING - Do not modify any of these properties when an application
+ #  using this configuration file has been installed as a service.
+ #  Please uninstall the service before modifying this section.  The
+ #  service can then be reinstalled.
+
+ # Name of the service
+ wrapper.ntservice.name=CruiseControl
+
+ # Display name of the service
+ wrapper.ntservice.displayname=CruiseControl Service
+
+ # Description of the service
+ wrapper.ntservice.description=Continuous integration builds \
+ and tests with JUnit, Ant and CruiseControl.
+
+ # Service dependencies.  Add dependencies as needed starting from 1
+ wrapper.ntservice.dependency.1=
+
+ # Mode in which the service is installed.  AUTO_START or DEMAND_START
+ wrapper.ntservice.starttype=AUTO_START
+
+ # Priority at which
+  the service is run.  NORMAL, LOW, HIGH, or
+ #  REALTIME
+ wrapper.ntservice.process_priority=NORMAL
+
+ # Allow the service to interact with the desktop.
+ wrapper.ntservice.interactive=false
+
+
+ #****************************************************************
+ # Wrapper Linux/Unix Service Properties
+ #****************************************************************
+ wrapper.daemonize=TRUE
 
