@@ -249,9 +249,7 @@ time to build
                 <tr>
                     <td>-webport&nbsp;<i>port</i></td>
                     <td>No</td>
-                    <td>Port number for Jetty. Defaults to 8080, which means that you can access
-                    the Reporting Application at
-                    <a class="external" href="http://localhost:8080">http://localhost:8080</a>.</td>
+                    <td>Port number for Jetty. Jetty will not start unless you specify this option or -webapppath.</td>
                 </tr>
                 <tr>
                     <td>-webapppath&nbsp;<i>port</i></td>
